parslers-benchmark/src/tests/invalid/semanticErr/variables/basicTypeErr12.wacc
# type mismatch: string <- char

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  string s = 'h'
end
